--- a/VEDA-1/VEDA1.ui
+++ b/VEDA-1/VEDA1.ui
@@ -1925,7 +1925,7 @@ border-bottom-left-radius: 25px;</string>
       <widget class="QLabel" name="label_9">
        <property name="geometry">
         <rect>
-         <x>60</x>
+         <x>55</x>
          <y>695</y>
          <width>131</width>
          <height>36</height>
@@ -1937,7 +1937,7 @@ border-bottom-left-radius: 25px;</string>
         </font>
        </property>
        <property name="styleSheet">
-        <string notr="true">color: rgb(255, 255, 255);</string>
+        <string notr="true">color: rgb(212, 212, 212);</string>
        </property>
        <property name="text">
         <string>® 2024 veda-1. Все права защищены.</string>
@@ -2348,9 +2348,15 @@ QScrollBar::add-page:vertical, QScrollBar::sub-page:vertical {
        <rect>
         <x>260</x>
         <y>310</y>
-        <width>282</width>
-        <height>197</height>
+        <width>486</width>
+        <height>341</height>
        </rect>
+      </property>
+      <property name="minimumSize">
+       <size>
+        <width>486</width>
+        <height>341</height>
+       </size>
       </property>
       <property name="styleSheet">
        <string notr="true">background-color: rgb(32, 35, 37);
@@ -2362,13 +2368,34 @@ border-radius: 21px</string>
       <property name="frameShadow">
        <enum>QFrame::Raised</enum>
       </property>
+      <layout class="QHBoxLayout" name="horizontalLayout">
+       <item>
+        <widget class="QGraphicsView" name="chart">
+         <property name="minimumSize">
+          <size>
+           <width>468</width>
+           <height>323</height>
+          </size>
+         </property>
+         <property name="styleSheet">
+          <string notr="true"/>
+         </property>
+         <property name="verticalScrollBarPolicy">
+          <enum>Qt::ScrollBarAlwaysOff</enum>
+         </property>
+         <property name="horizontalScrollBarPolicy">
+          <enum>Qt::ScrollBarAlwaysOff</enum>
+         </property>
+        </widget>
+       </item>
+      </layout>
      </widget>
      <widget class="QFrame" name="frame_9">
       <property name="geometry">
        <rect>
-        <x>260</x>
+        <x>760</x>
         <y>525</y>
-        <width>651</width>
+        <width>151</width>
         <height>197</height>
        </rect>
       </property>
@@ -2386,9 +2413,9 @@ border-radius: 21px</string>
      <widget class="QFrame" name="frame_10">
       <property name="geometry">
        <rect>
-        <x>560</x>
+        <x>760</x>
         <y>310</y>
-        <width>246</width>
+        <width>271</width>
         <height>197</height>
        </rect>
       </property>
@@ -2426,30 +2453,10 @@ border-radius: 21px</string>
      <widget class="QFrame" name="frame_12">
       <property name="geometry">
        <rect>
-        <x>820</x>
-        <y>310</y>
-        <width>211</width>
-        <height>90</height>
-       </rect>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">background-color: rgb(32, 35, 37);
-border-radius: 21px</string>
-      </property>
-      <property name="frameShape">
-       <enum>QFrame::StyledPanel</enum>
-      </property>
-      <property name="frameShadow">
-       <enum>QFrame::Raised</enum>
-      </property>
-     </widget>
-     <widget class="QFrame" name="frame_13">
-      <property name="geometry">
-       <rect>
-        <x>820</x>
-        <y>415</y>
-        <width>211</width>
-        <height>90</height>
+        <x>260</x>
+        <y>670</y>
+        <width>486</width>
+        <height>51</height>
        </rect>
       </property>
       <property name="styleSheet">
@@ -2477,7 +2484,6 @@ border-radius: 21px</string>
      <zorder>frame_10</zorder>
      <zorder>frame_11</zorder>
      <zorder>frame_12</zorder>
-     <zorder>frame_13</zorder>
     </widget>
    </widget>
   </widget>
